Add span tag to h1 in header

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section>
       <header>
         <h1>
-          Reliable, efficient delivery
+          <span>Reliable, efficient delivery</span>
           <strong>Powered by Technology</strong>
         </h1>
 
