Add responsive css file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/style/style.css">
   <link rel="stylesheet" href="./assets/style/animation.css">
+  <link rel="stylesheet" href="./assets/style/responsivity.css">
   
   <title>Frontend Mentor | Four card feature section</title>
 
